# simple_obj_loader

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Objloader  README.md  cmake_install.cmake
benchmarks/: CMakeLists.txt  ObjLoaderBenchmark.cpp
include/: Mesh.hpp  MeshComponents.hpp  Obj.hpp  ObjLoader.hpp  Open3DOR.hpp  Visuals.hpp
src/: Mesh.cpp  MeshComponents.cpp  ObjLoader.cpp  Open3DOR.cpp  Visuals.cpp  main.cpp  objloader.cpp
